@startuml

entity Client {
  *id: UUID
  --
  name: string
  document: string
  billing_email: string
  payment_token: string
}

entity Product {
  *id: UUID
  --
  name: string
  kind: string
}

entity Subscription {
  *id: UUID
  --
  price_cents: int
  cycle_day: int
  status: enum
  charge_type: enum
}

entity Invoice {
  *id: UUID
  --
  due_date: date
  status: enum
  legacy_origin: string
}

entity InvoiceItem {
  *id: UUID
  --
  quantity: int
  unit_price_cents: int
  total_cents: int
}

entity Payment {
  *id: UUID
  --
  status: enum
  method: string
  gateway_charge_id: string
  gateway_response: json
}

Client ||--o{ Subscription
Client ||--o{ Invoice
Subscription ||--o{ Invoice
Subscription }o--|| Product
Invoice ||--o{ InvoiceItem
Invoice ||--|| Payment
InvoiceItem }o--|| Product

@enduml
